# Nirop-AI

./: .gitignore  Implementation-Plan.md  Plan.md  docker-compose.yml  skills-lock.json
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 04180223016f_add_campaign_pause_reason.py  0482214f3672_initial_schema.py  1773ce559437_drop_subscriber_source_site_audiences_.py  2f19ff96835c_add_tracked_links_click_events_open_.py  e29731434399_make_send_event_mailbox_id_nullable.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: auth.py  campaigns.py  logs.py  mailboxes.py  public.py  subscribers.py
apps/api/app/core/: celery_app.py  config.py  db.py  security.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: auth.py  campaign.py  logs.py  mailbox.py  subscriber.py
apps/api/app/scripts/: create_user.py
apps/api/app/services/: ai_variants.py  circuit_breaker.py  mailbox_rotation.py  mailer.py  rate_limiter.py  tracking.py  unsubscribe.py
apps/api/app/workers/: tasks.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  styles.css
apps/web/src/components/layout/: ambient-background.tsx  empty-state.tsx  page-header.tsx  sidebar.tsx  theme-picker.tsx  topbar.tsx
apps/web/src/components/ui/: avatar.tsx  (+14 more)
apps/web/src/hooks/: use-auth.ts  use-campaigns.ts  use-health.ts  use-logs.ts  use-mailboxes.ts  use-subscribers.ts  use-theme.ts
apps/web/src/lib/: api.ts  types.ts
apps/web/src/routes/: _app.tsx  login.tsx
(+7 files in other folders)
