[project]
name = "mail-ai-api"
version = "0.1.0"
description = "Mail-AI backend: FastAPI API + Celery workers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=43.0",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "anthropic>=0.40",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = false
